# AwesomeMediaLibraryManager

./: .gitignore  AwesomeMediaLibraryManagerSettings.kcfg  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  alltests.cpp  awesomemedialibrarymanagersettings.kcfgc  gdb_wrap.sh  main.cpp  nomoc.imp  nomocdefs.h  nomocimpl.h  settings.kcfg  settings.kcfgc
resources/: AMLMDatabase.xsd  AppIcon.qrc  AwesomeMediaLibraryManager.rc  AwesomeMediaLibraryManagerui.rc  CMakeLists.txt  TangoIcons.qrc  VersionInfo.cpp.in  VersionInfo.h  add_xmlids_from_isrc_tracks.xq  amlm.qrc  amlmdb-flatten-test.xq  database_filter_by_href_regex.xq  dummyplaylist.xml  filelist.xq  filelist_stringlistout.xq  oxygenicons.qrc  track_xquery.xq  xquery_files.qrc
resources/icons/Tango/: index.theme
resources/icons/oxygen-icons/: .gitrepo
src/: AMLMApp.cpp  AMLMApp.h  AMLMSettings.h  AwesomeMediaLibraryManagerSettings.kcfg  AwesomeMediaLibraryManagerSettings.kcfgc  AwesomeMediaLibraryManagerui.rc  CMakeLists.txt  Core.cpp  Core.h  alltests.cpp  amlm-configure.h.in  callgrind_wrap.sh  config.h.in  gdb_wrap.sh  gdbinit.in  io.github.gvansickle.awesomemedialibrarymanager.appdata.xml  io.github.gvansickle.awesomemedialibrarymanager.desktop  kde_gdb_wrapper.sh  kdev_gdbinit.txt  main.cpp
src/attic/: ExtAsyncExceptions.h  IExtFutureWatcher.cpp  README.md
src/attic/ExtAsync/: ExtAsync.cpp  ExtAsync_impl.h  ExtFuturePropagationHandler.cpp  ExtFutureState.h  ExtFutureWatcher.h
src/attic/impl/: ExtFuture_make_xxx_future.h  ExtFuture_when_any.h
src/concurrency/: AMLMCompositeJob.cpp  AMLMCompositeJob.h  AMLMJob.cpp  AMLMJob.h  AMLMJobT.cpp  AMLMJobT.h  ActivityManager.cpp  ActivityManager.h  AsyncTaskManager.cpp  AsyncTaskManager.h  CMakeLists.txt  DebugSequence.cpp  DebugSequence.h  DirectoryScanJob.cpp  DirectoryScanJob.h  ExtAsync.cpp  ExtAsync.h  ExtAsyncExceptions.cpp  ExtAsyncExceptions.h  ExtAsyncTask.cpp  ExtAsyncTask.h  ExtAsync_traits.h  ExtFuture.cpp  ExtFuture.h  ExtFutureProgressInfo.cpp  ExtFutureProgressInfo.h  ExtFuturePropagationHandler.cpp  ExtFuturePropagationHandler.h  ExtFutureState.h  ExtFutureWatcher.h  ExtFuture_traits.h  ExtendedDeferred.h  IExtFutureWatcher.cpp  IExtFutureWatcher.h  ReportingRunner.h  ThreadSafetyAnnotations.h  ThreadsafeMap.cpp  ThreadsafeMap.h  WorkerThreadBase.cpp  WorkerThreadBase.h  (+4 more)
src/concurrency/impl/: ExtAsync_RunInThread.h  ExtAsync_impl.h  ExtFutureImplHelpers.cpp  ExtFutureImplHelpers.h  ExtFuture_fwddecl_p.h  ExtFuture_impl.hpp  ExtFuture_make_xxx_future.h  ExtFuture_when_all.cpp  ExtFuture_when_all.h  ExtFuture_when_any.cpp  ExtFuture_when_any.h  IExecutor.h  ManagedExtFutureWatcher_impl.cpp  ManagedExtFutureWatcher_impl.h
src/concurrency/tests/: AMLMJobTests.cpp  AMLMJobTests.h  AsyncTests.cpp  ExtAsyncTaskTests.cpp  ExtAsyncTaskTests.h  ExtAsyncTestCommon.cpp  ExtAsyncTestCommon.h  ExtAsyncTests.cpp  ExtAsyncTests.h  ExtFutureTests.cpp  ExtFutureTests.h  QTestAMLMJobTests.cpp  QtPromiseTests.cpp  QtPromiseTests.h
src/future/: CMakeLists.txt  InsertionOrderedMap.cpp  InsertionOrderedMap.h  QVariantHomogenousList.cpp  QVariantHomogenousList.h  Unit.hpp  attributes.h  cloneable.h  cpp14_concepts.hpp  deduced_type.hpp  enable_shared_from_this_virtual.h  function_traits.cpp  function_traits.hpp  future_algorithms.h  future_type_traits.hpp  grvs_functional.hpp  guideline_helpers.cpp  guideline_helpers.h  initializer_list_helpers.cpp  initializer_list_helpers.h  overloaded.h  preproc.h  static_if.hpp  string_ops.cpp  string_ops.h
src/gui/: AboutBox.cpp  AboutBox.h  ActivityProgressDialog.cpp  ActivityProgressDialog.h  ActivityProgressDialog.ui  ActivityProgressWidget.cpp  ActivityProgressWidget.h  CMakeLists.txt  CollectionDockWidget.cpp  CollectionDockWidget.h  DragDropTreeViewStyleProxy.cpp  DragDropTreeViewStyleProxy.h  Experimental.cpp  Experimental.h  FilterWidget.cpp  FilterWidget.h  ItemDelegateLength.h  MDIArea.cpp  MDILibraryView.cpp  MDILibraryView.h  MDINowPlayingView.cpp  MDINowPlayingView.h  MDIPlaylistView.cpp  MDIPlaylistView.h  MDITreeViewBase.cpp  MDITreeViewBase.h  MainWindow.cpp  MainWindow.h  MetadataDockWidget.cpp  MetadataDockWidget.h  NetworkAwareFileDialog.cpp  NetworkAwareFileDialog.h  PlayerControls.cpp  Theme.cpp  Theme.h  expdialog.cpp  expdialog.h  expdialog.ui
src/logic/: AMLMCompoundTrack.cpp  AMLMCompoundTrack.h  AMLMTagMap.cpp  AMLMTagMap.h  AMLMTrack.cpp  AMLMTrack.h  AudioFileType.cpp  AudioFileType.h  CMakeLists.txt  ColumnSpec.h  CoverArtJob.cpp  CoverArtJob.h  CueSheet.cpp  CueSheet.h  CueSheetParser.cpp  CueSheetParser.h  DirScanResult.cpp  DirScanResult.h  ExtMimeType.cpp  ExtMimeType.h  ExtUrl.cpp  ExtUrl.h  Frames.cpp  Frames.h  ISerializable.h  ISerializer.h  Library.cpp  Library.h  LibraryEntry.cpp  LibraryEntry.h  LibraryEntryLoaderJob.cpp  LibraryEntryLoaderJob.h  LibraryEntryMimeData.cpp  LibraryEntryMimeData.h  LibraryModel.cpp  LibraryModel.h  LibraryRescanner.cpp  LibraryRescanner.h  LibraryRescannerJob.cpp  LibraryRescannerJob.h  (+36 more)
src/utils/: AboutDataSetup.cpp  AboutDataSetup.h  AsyncDirScanner.cpp  AsyncDirScanner.h  CMakeLists.txt  ConnectHelpers.cpp  ConnectHelpers.h  DebugBlock.cpp  DebugBlock.h  DebugHelpers.cpp  DebugHelpers.h  DebugSequence.cpp  DebugSequence.h  EnumFlagHelpers.h  Fraction.cpp  Fraction.h  Logging.cpp  Logging.h  MapConverter.cpp  MapConverter.h  QtCastHelpers.h  QtHelpers.cpp  QtHelpers.h  RegisterQtMetatypes.cpp  RegisterQtMetatypes.h  StaticAnalysis.h  Stopwatch.cpp  Stopwatch.h  StringHelpers.cpp  StringHelpers.h  TheSimplestThings.h  Theme.cpp  Theme.h  UniqueIDMixin.cpp  UniqueIDMixin.h  VectorHelpers.cpp  VectorHelpers.h  WorkerThreadBase.h  crtp.h  ext_iterators.cpp  (+2 more)
tests/: AlgorithmTests.cpp  AlgorithmTests.h  CMakeLists.txt  CueSheetTests.cpp  CueSheetTests.h  FlagsAndEnumsTests.cpp  FlagsAndEnumsTests.h  IResultsSequenceMock.cpp  IResultsSequenceMock.h  SerializationTests.cpp  TestHelpers.h  TestLifecycleManager.cpp  TestLifecycleManager.h  alltests.cpp  string_ops_tests.cpp  string_ops_tests.h  treetest.cpp
(+427 files in other folders)
